--- a/BlueSyncUI/BlueSync/package.json
+++ b/BlueSyncUI/BlueSync/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BlueSync",
+  "name": "blue-sync",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,5 +8,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "react-native": "0.77.0"
+  },
+  "devDependencies": {
+    "@react-native-community/cli": "^15.1.3"
   }
 }
